bpy.utils.resource_path() does not return the right paths with portable blender and environment variables #101389

Closed
opened 2022-09-27 03:03:55 +02:00 by Fabian · 5 comments

System Information
Operating system: Windows 10 Pro 21H2
Graphics card: nvidia Geforce 1080ti

Blender Version
Broken: 3.3.0

Short description of error
bpy.utils.resource_path returns invalid paths when using environment variables to run a portable blender setup

Exact steps for others to reproduce the error
Given the following startup batch file:

SET BLENDER_USER_CONFIG=%~dp0Portable_Data\Config
SET BLENDER_USER_SCRIPTS=%~dp0Portable_Data\Scripts
SET BLENDER_USER_DATAFILES=%~dp0Portable_Data\Data
SET BLENDER_SYSTEM_SCRIPTS=%~dp03.3\scripts
SET BLENDER_SYSTEM_DATAFILES=%~dp03.3\datafiles
SET BLENDER_SYSTEM_PYTHON=%~dp03.3\python
SET TEMP=%~dp0Portable_Data\Temp

start Blender.exe

Blender returns the following paths with bpy.utils.resource_path seemingly ignoring the environment variables. This causes addons to trip up that use bpy.utils.resource_path to build paths and prevent Portable Blender from working properly.

>>> print(bpy.utils.resource_path('USER'))

C:\Users\myusername\AppData\Roaming\Blender Foundation\Blender\3.3

>>> print(bpy.utils.resource_path('LOCAL'))

Z:\BLENDER\blender-3.3.0-windows-x64\3.3

>>> print(bpy.utils.resource_path('SYSTEM'))

C:\ProgramData\Blender Foundation\Blender\3.3
**System Information** Operating system: Windows 10 Pro 21H2 Graphics card: nvidia Geforce 1080ti **Blender Version** Broken: 3.3.0 **Short description of error** bpy.utils.resource_path returns invalid paths when using environment variables to run a portable blender setup **Exact steps for others to reproduce the error** Given the following startup batch file: ``` SET BLENDER_USER_CONFIG=%~dp0Portable_Data\Config SET BLENDER_USER_SCRIPTS=%~dp0Portable_Data\Scripts SET BLENDER_USER_DATAFILES=%~dp0Portable_Data\Data SET BLENDER_SYSTEM_SCRIPTS=%~dp03.3\scripts SET BLENDER_SYSTEM_DATAFILES=%~dp03.3\datafiles SET BLENDER_SYSTEM_PYTHON=%~dp03.3\python SET TEMP=%~dp0Portable_Data\Temp start Blender.exe ``` Blender returns the following paths with bpy.utils.resource_path seemingly ignoring the environment variables. This causes addons to trip up that use bpy.utils.resource_path to build paths and prevent Portable Blender from working properly. ``` >>> print(bpy.utils.resource_path('USER')) C:\Users\myusername\AppData\Roaming\Blender Foundation\Blender\3.3 >>> print(bpy.utils.resource_path('LOCAL')) Z:\BLENDER\blender-3.3.0-windows-x64\3.3 >>> print(bpy.utils.resource_path('SYSTEM')) C:\ProgramData\Blender Foundation\Blender\3.3 ```
Author

Added subscriber: @fabian-13

Added subscriber: @fabian-13
Campbell Barton self-assigned this 2022-09-27 08:38:43 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This isn't technically a bug, because there is only support overriding the directories BLENDER_USER_* and BLENDER_SYSTEM_* paths. Not BLENDER_RESOURCE_PATH_USER & BLENDER_RESOURCE_PATH_SYSTEM (internal names for bpy.utils.resource_path('USER') & bpy.utils.resource_path('SYSTEM')).

Those paths could be set auto-detected but the behavior gets involved if they don't share a common parent or only some are defined, so I'm proposing to support overriding them in D16111.

This isn't technically a bug, because there is only support overriding the directories `BLENDER_USER_*` and `BLENDER_SYSTEM_*` paths. Not `BLENDER_RESOURCE_PATH_USER` & `BLENDER_RESOURCE_PATH_SYSTEM` (internal names for `bpy.utils.resource_path('USER')` & `bpy.utils.resource_path('SYSTEM')`). Those paths could be set auto-detected but the behavior gets involved if they don't share a common parent or only some are defined, so I'm proposing to support overriding them in [D16111](https://archive.blender.org/developer/D16111).

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Resolved by bf4926b30c.

Resolved by bf4926b30c.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#101389
No description provided.